--- a/renovate.json
+++ b/renovate.json
@@ -3,6 +3,10 @@
   "extends": [
     "config:recommended"
   ],
+  "baseBranches": [
+    "master",
+    "release/3.9.x"
+  ],
   "constraints": {
     "php": ">=8.1 <8.2"
   },
