--- a/renovate.json
+++ b/renovate.json
@@ -5,7 +5,8 @@
   ],
   "baseBranches": [
     "master",
-    "release/3.9.x"
+    "release/3.9.x",
+    "release/4.0.x"
   ],
   "constraints": {
     "php": ">=8.1 <8.2"
