--- a/release-please-config.json
+++ b/release-please-config.json
@@ -6,6 +6,7 @@
       "bump-minor-pre-major": true,
       "bump-patch-for-minor-pre-major": true,
       "include-component-in-tag": false,
+      "skip-changelog": true,
       "extra-files": [
         {
           "type": "generic",
