fix(ci): remove --with-dependencies from composer validate

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -32,7 +32,7 @@ jobs:
       run: find . -name "*.php" -not -path "./vendor/*" -print0 | xargs -0 -n1 php -l
 
     - name: Validate composer.json and composer.lock
-      run: composer validate --strict --check-lock --with-dependencies
+      run: composer validate --strict --check-lock
 
     - name: Cache Composer packages
       id: composer-cache
